<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>bom3</groupId>
	<artifactId>app</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>war</packaging>

	<name>app</name>
	<url>http://maven.apache.org</url>

	<properties>
		<java.version>1.7</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	    <maven.compiler.source>1.6</maven.compiler.source>
	    <maven.compiler.target>1.6</maven.compiler.target>
	    
	    <!-- Logging -->
		<version.slf4j>1.7.36</version.slf4j>
		<version.logback>1.4.5</version.logback>
	    
		<!-- Spring -->
		<spring.version>3.2.5.RELEASE</spring.version>
		<cglib.version>2.2.2</cglib.version>
		
		<!-- MyBatis -->
		<version.mybatis>3.2.3</version.mybatis>
		<version.mybatis.spring>1.2.1</version.mybatis.spring>
	
		<!-- Jackson -->
		<version.jackson>2.2.3</version.jackson>
	
		<!-- Servlet -->
		<version.servlet>3.0</version.servlet>
	</properties>

	<dependencies>
		<!-- Spring core & mvc -->
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>${spring.version}</version>
		</dependency>
		
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-jdbc</artifactId>
			<version>${spring.version}</version>
		</dependency>
		
		<dependency>
		    <groupId>org.springframework.hateoas</groupId>
		    <artifactId>spring-hateoas</artifactId>
		    <version>0.8.0.RELEASE</version>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-webmvc</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-orm</artifactId>
			<version>${spring.version}</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<version>${spring.version}</version>
			<type>jar</type>
			<scope>test</scope>
		</dependency>
		
		<!-- MyBatis -->
		<dependency>
			<groupId>org.mybatis</groupId>
			<artifactId>mybatis</artifactId>
			<version>${version.mybatis}</version>
		</dependency>

		<dependency>
			<groupId>org.mybatis</groupId>
			<artifactId>mybatis-spring</artifactId>
			<version>${version.mybatis.spring}</version>
		</dependency>

		<!-- HSQLDB -->
		<dependency>
			<groupId>org.hsqldb</groupId>
			<artifactId>hsqldb</artifactId>
			<version>2.3.1</version>
		</dependency>

		<dependency>
			<groupId>org.pojomatic</groupId>
			<artifactId>pojomatic</artifactId>
			<version>1.0</version>
		</dependency>
		

		<!-- CGLib for @Configuration -->
		<dependency>
			<groupId>cglib</groupId>
			<artifactId>cglib-nodep</artifactId>
			<version>${cglib.version}</version>
			<scope>runtime</scope>
		</dependency>
		
		<!-- Logging with SLF4J & LogBack -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${version.slf4j}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>jcl-over-slf4j</artifactId>
			<version>${version.slf4j}</version>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>${version.logback}</version>
		</dependency>


		<!-- Servlet Spec -->
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>servlet-api</artifactId>
			<version>2.4</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>javax.servlet.jsp</groupId>
			<artifactId>jsp-api</artifactId>
			<version>2.1</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>

	<repositories>
		<repository>
			<id>springsource-milestones</id>
			<name>SpringSource Milestones Proxy</name>
			<url>https://oss.sonatype.org/content/repositories/springsource-milestones</url>
		</repository>
	</repositories>

	<build>
		<finalName>app</finalName>
		<pluginManagement>
		<plugins>
			<plugin>
	          <artifactId>maven-resources-plugin</artifactId>
	          <version>3.0.2</version>
	        </plugin>
	        <plugin>
	          <artifactId>maven-compiler-plugin</artifactId>
	          <version>3.8.0</version>
	        </plugin>
	        <plugin>
	          <artifactId>maven-surefire-plugin</artifactId>
	          <version>2.22.1</version>
	        </plugin>
	        <plugin>
	          <artifactId>maven-jar-plugin</artifactId>
	          <version>3.0.2</version>
	        </plugin>
	        <plugin>
	          <artifactId>maven-install-plugin</artifactId>
	          <version>2.5.2</version>
	        </plugin>
	        <plugin>
	          <artifactId>maven-deploy-plugin</artifactId>
	          <version>2.8.2</version>
	        </plugin>
	        
	         <!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
	        <plugin>
	          <artifactId>maven-site-plugin</artifactId>
	          <version>3.7.1</version>
	        </plugin>
	        <plugin>
	          <artifactId>maven-project-info-reports-plugin</artifactId>
	          <version>3.0.0</version>
	        </plugin>
	        
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
	            <artifactId>maven-compiler-plugin</artifactId>
	            <inherited>true</inherited>
	            <version>3.8.1</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
		</plugins>
		</pluginManagement>
		
		<plugins>
	    <plugin>
		    <groupId>org.apache.tomcat.maven</groupId>
		    <artifactId>tomcat7-maven-plugin</artifactId>
		    <version>2.2</version>
		    <configuration>
		        <url>http://localhost:8080/manager/text</url>
		        <server>TomcatServer</server>
		        <path>/myapp</path>
		    </configuration>
		</plugin>
		
		
		<plugin>
		  <groupId>org.codehaus.cargo</groupId>
		  <artifactId>cargo-maven2-plugin</artifactId>
		  <version>1.7.6</version>
		  <configuration>
		    <container>
		      <containerId>tomcat9x</containerId>
		      <type>embedded</type>
		    </container>
		  </configuration>
		</plugin>
		<!-- 
		<plugin>
		    <groupId>org.codehaus.cargo</groupId>
		    <artifactId>cargo-maven2-plugin</artifactId>
		    <version>1.8.3</version>
		    <configuration>
		        <container>
		            <containerId>tomcat9x</containerId>
		            <type>embedded</type>
		        </container>
		        <deployables>
		            <deployable>
		                <type>war</type>
		                <location>${project.build.directory}/${project.build.finalName}.war</location>
		                <properties>
		                    <context>/</context>
		                </properties>
		            </deployable>
		        </deployables>
		    </configuration>
		</plugin>
	     -->
    <!-- 
		<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-compiler-plugin</artifactId>
			<version>3.1</version>
			<configuration>
				<source>1.6</source>
				<target>1.6</target>
				<encoding>UTF-8</encoding>
			</configuration>
		</plugin>

		<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-resources-plugin</artifactId>
			<version>2.6</version>
			<configuration>
				<encoding>UTF-8</encoding>
			</configuration>
		</plugin>

		<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-surefire-plugin</artifactId>
			<version>2.16</version>
			<configuration>
				<argLine>
					-Xms256m -Xmx512m -XX:MaxPermSize=128m
					-Dfile.encoding=UTF-8
				</argLine>
			</configuration>
		</plugin>
	 -->
	</plugins>
	</build>
</project>
